JumpScript/tests/baselines/reference/thisWhenTypeCheckFails.errors.txt
tests/cases/compiler/thisWhenTypeCheckFails.jump(4,17): error TS2322: Type 'void' is not assignable to type 'string'.


==== tests/cases/compiler/thisWhenTypeCheckFails.jump (1 errors) ====
    class c {
        public n() {
            var k = () => {
                var s: string = this.n();
                    ~
!!! error TS2322: Type 'void' is not assignable to type 'string'.
            }
        }    
    }
    